# CentralTMServer

./: .gitignore  .replit  API_DOCUMENTATION.md  API_SEPARATION_PLAN.md  DELAY_PROPAGATION_DOCS.md  Dockerfile  PREDICTION_CYCLE_INTEGRATION.md  active_trains.py  api.py  api_active_trains.py  api_simulator.py  app.py  check_db.py  cif_parser.py  config.py  database.py  debug_page.html  docker-compose.yml  extract_broken_schedules.py  f.py  file_downloader.py  find_bluancr_segments.py  find_bluancr_segments_db.py  fix_area_of_interest.py  fix_cif_parser_cr_handling.py  fix_load_file_data.py  fix_location_tables.py  fix_parser.py  fix_platform_docker.py  location_container.py  log_manager.py  main.py  models.py  platform_docker_response.json  process_test_file.py  pyproject.toml  r.py  replit.md  reset_db.py  reset_db_clean.py  (+24 more)
DOCS/: API_Documentation.md  ActiveTrains_System.md  CIF_Parser.md  Database_Operations.md  README.md  STP_Indicators.md
attached_assets/: test.CIF
file archive/: apply_stp_changes.py  cif_parser (copy) 1.py  cif_parser (copy).py  cif_parser_optimized.py
templates/: debug.html  logs.html  train_schedule.html
test_data/: test_good.CIF
tests/: test_cif_parser.py  test_cif_parser_basic.py  test_cif_parser_integration.py  test_data_loader.py  test_location_container.py  test_platform_docker_api.py  test_stp_indicators_api.py  test_stp_integration.py  test_stp_main.py  test_stp_precedence.py
tests/time_utils/: __init__.py  run_time_tests.py  test_time_edge_cases.py  test_time_parsing.py
web/: web_blueprint.py
web/static/: platform_docker.css  (+2 more)
(+28 files in other folders)
